--- a/gb/20/1/20/n11807908.md
+++ b/gb/20/1/20/n11807908.md
@@ -1,29 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/crlhi259/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/crlhi259/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>武汉肺炎 病毒株基因有8成与SARS相同</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/Unknown33-1-600x400.jpg" />
-<h6>武汉医院急诊科医生全副武装接诊。（网络图片）
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>武汉肺炎发展轨迹与病毒基因跟SARS类似</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/Unknown33-1-600x400.jpg" />
+<h6>武汉医院急诊科医生全副武装。（网络图片）
 </h6>
 <hr>
-<p>【大纪元2020年01月20日讯】（大纪元记者张顿综合报导）<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>已向大陆各地、亚洲等国不断扩散。专家指，武汉肺炎不但<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E5%8F%91%E5%B1%95%E8%BD%A8%E8%BF%B9.md">发展轨迹</a>与当年早期SARS疫情高度相似，而且<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%A0%AA%E5%9F%BA%E5%9B%A0.md">病毒株基因</a>与SARS基因有8成相同。加之，中共一如既往地掩盖疫情，SARS梦魇恐再现。</p>
-<h2><strong><a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>迅速扩散</strong></h2>
+<p>【大纪元2020年01月20日讯】（大纪元记者张顿综合报导）<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>已向大陆各地、亚洲等国不断扩散。专家指，武汉肺炎不但<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%91%E5%B1%95%E8%BD%A8%E8%BF%B9.md#1">发展轨迹</a>与当年早期SARS疫情高度相似，而且<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%A0%AA%E5%9F%BA%E5%9B%A0.md#1">病毒株基因</a>与SARS基因有8成相同。加之，中共一如既往地掩盖疫情，SARS梦魇恐再现。</p>
+<h2><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>迅速扩散</strong></h2>
 <p>1月20日晚，上海市确认首例武汉新型冠状病毒肺炎（简称，武汉肺炎，下同）病患。患者是56岁女性，武汉市户籍。她1月12日来沪，15日就诊后即被隔离治疗。</p>
 <p>同天，北京、深圳也分别确诊2例及1例武汉肺炎患者，深圳另有8人隔离治疗；浙江省通报有5例疑似病人。</p>
 <p>而病毒发源地的武汉，18、19日确诊病例急遽增加136例。其中，18日增59人，19日增77人。另累计与病患有密切接触者817人，尚在接受医学观察者90人。</p>
 <p>截至20日晚，大陆共确诊218例武汉肺炎患者。其中，武汉市198例，北京市5例，广东省14例，上海1例。疑似病例6例，分别为四川省2例，云南省1例，上海市1例，广西壮族自治区1例，山东省1例。</p>
 <p>在大陆境外，香港确诊99例武汉肺炎病患，日本确诊1例，泰国确诊2例，韩国确诊1例。在疑似病例方面，新加坡有5例，越南有2例。</p>
 <h2><strong>武汉肺炎发展曲线与SARS高度相似</strong></h2>
-<p>1月20日，香港大学流感研究中心主任管轶接受财新记者专访时指出，目前武汉肺炎<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E5%8F%91%E5%B1%95%E8%BD%A8%E8%BF%B9.md">发展轨迹</a>与当年SARS疫情相像，应该引发高度关注。</p>
+<p>1月20日，香港大学流感研究中心主任管轶接受财新记者专访时指出，目前武汉肺炎<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%91%E5%B1%95%E8%BD%A8%E8%BF%B9.md#1">发展轨迹</a>与当年SARS疫情相像，应该引发高度关注。</p>
 <p>管轶表示，武汉肺炎根据官方通报首例发病是在12月12日，在医学上可能实际的早发病例要向前推大概半个月到一个月，因此最初的发病可能是11月20日～12月1日期间。</p>
 <p>当年SARS疫情，首例发病时间是2002年11月16日，到次年1月底出现第一个“超级传播者”。今天已经是1月20日，这么看，这个病毒在人群传播和适应能力、以及发病情况和致病能力都跟早期的SARS发展曲线高度相似。</p>
 <p>当记者问为何武汉突然新增136病例时，管轶说，自己不想妄加评论，但有人说武汉新型冠状病毒肺炎“可防、可控、可治”。但是没有进一步解释怎么防、如何控和怎么治这个问题。</p>
-<p>1月19日，武汉市疾病预防控制中心主任李刚在记者会上表示：目前综合判断，新型冠状病毒不排除有限人传人的可能，但持续人传人的风险较低。他还称“疫情是可防可控的”。他的这种说法，得到中共“国健委”（国家卫生健康委员会）卫生应急办公室的确认。</p>
+<p>1月19日，武汉市疾病预防控制中心主任李刚在记者会上表示：目前综合判断，新型冠状病毒不排除有限人传人的可能，但持续人传人的风险较低。他还称“疫情是可防可控的”。他的这种说法，得到中共“卫健委”（国家卫生健康委员会）卫生应急办公室的确认。</p>
 <p>香港大学流感研究中心主任管轶质问，“可防”，是防人还是防动物？“可控”，是隔离病人、隔离密切接触者？但目前病例突然增加，是不是说明我们在防、控方面存在漏洞，并没有找到和切断感染源。</p>
 <p>再者，“可治”，据他了解，现在并没有特效药，一般是支持疗法，严重患者是激素疗法。</p>
 <p>管轶指出，新增136例，就说明有人际传播。是不是“人传人”应该不再是玩文字游戏。</p>
 <p>武汉2019年12月起爆发不明原因肺炎疫情，病原体初判为新型冠状病毒，世界卫生组织（WHO）已命名为2019-nCoV（2019新型冠状病毒）。</p>
-<h2><strong>武汉<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%A0%AA%E5%9F%BA%E5%9B%A0.md">病毒株基因</a>8成与SARS相同</strong></h2>
+<h2><strong>武汉<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E6%A0%AA%E5%9F%BA%E5%9B%A0.md#1">病毒株基因</a>8成与SARS相同</strong></h2>
 <p>1月20日，巴黎巴斯德研究院（Institut Pasteur）流行病学部主任冯达奈（Arnaud Fontanet）对法新社表示，武汉肺炎的病毒株基因有8成与SARS相同。</p>
 <p>冯达奈：“我们目前并没有证据显示病毒一定会突变，但SARS就是这样产生的。不过病毒才刚开始流传一小段时间，所以现在言之过早。”</p>
 <p>他警告，虽然该病毒目前的形式似乎“比SARS弱”，但仍有可能突变为更致命的病毒株。</p>
@@ -44,40 +44,44 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/20/n11807908.htm">武汉肺炎 病毒株基因有8成与SARS相同</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11805668.htm">料中国新年游客激增 加国三机场筛查武汉肺炎</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11804587.htm">香港再增11宗疑似武汉肺炎病例 最小3岁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11803776.htm">防武汉肺炎 加拿大三机场将进行筛查</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11803796.htm">武汉肺炎内地扩散  深圳上海传出疑似病例</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803040.htm">武汉肺炎 首批武汉直飞乘客在纽约落地受检</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11802375.htm">英专家推算武汉肺炎病列 恐已1700人感染</a></li>
-> <li><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md">【武汉肺炎 | 持续更新】武汉肺炎蔓延！突然增加136病例 增1死亡</a></li>
-> <li><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11805668.md">料中国新年游客激增 加国三机场筛查武汉肺炎</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805480.htm">武汉到底有多少人死于新型冠状病毒？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805440.htm">故宫奔驰女被爆：戴千万名表 住北京豪宅</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805504.htm">中科院“木兰”编程语言抄袭Python</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801312.htm">【武汉肺炎 | 持续更新】武汉肺炎蔓延！突然增加136病例 增1死亡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793221.htm">【历史回眸】做梦都是灭共复国的上将陈诚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778584.htm">【命理】天灾注死者天有定 古北京大地震幼儿见证</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776367.htm">“贤”的简化汉字 暗藏什么可怕后果？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11801973.htm">开豪车入故宫惹议 “露小宝”自称是红三代</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798622.htm">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803294.htm">将习近平名字译成不雅称呼 脸书发声明道歉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801450.htm">【新闻看点】6因素 北京接受川普惩罚性关税</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807823.htm">【新闻看点】战狼外交再碰壁 瑞典欲逐桂从友</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807565.htm">【拍案惊奇】武汉肺炎扩散 15万港人反暴政</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801405.htm">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805358.htm">与轧故宫红三代同名遭骂 女星高露无辜躺枪</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801168.htm">声援中学生集会 王喜以打牌为喻勉励学生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805546.htm">阮民安受邀为天下制裁集会献唱 突遭港警阻止</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805803.htm">邓超忙到没空买礼物 被儿子一句话惹哭了</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/20/n11805668.md#1">料中国新年游客激增 加国三机场筛查武汉肺炎</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11804587.md#1">香港再增11宗疑似武汉肺炎病例 最小3岁</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11803776.md#1">防武汉肺炎 加拿大三机场将进行筛查</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11803796.md#1">武汉肺炎内地扩散  深圳上海传出疑似病例</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/18/n11803040.md#1">武汉肺炎 首批武汉直飞乘客在纽约落地受检</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/18/n11802375.md#1">英专家推算武汉肺炎病列 恐已1700人感染</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807908.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283450.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(上)</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/20/n11807908.htm">武汉肺炎发展轨迹与病毒基因跟SARS类似</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/20/n11807908.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
